src/css/ui/contextmenu.css
#context {
  display: flex;
  position: absolute;
  min-width: 10rem;
  min-height: 2rem;
  max-width: 100vw;
  max-height: 100vh;
  background-color: var(--cm-bg);
  border-radius: 0.25rem;
  padding: 0.25rem 0;
  box-shadow: 0 3px 1rem black;
  z-index: 9999;
}

#context > a {
  display: flex;
  align-items: center;
  width: 100%;
  color: var(--m-0);
  cursor: pointer;
  text-decoration: none;
  background: transparent;
  padding: 0.25rem 0.5rem;
}

#context > a:hover {
  background-color: var(--ma);
}

#context.cmhide {
  opacity: 0;
}

